tests/reject/wildcard_expr.alg
sort S : Sort;
op x : → S;
eq bad _ = x;
